--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </footer>
 
     <script>
-        const API_KEY = "DEIN_API_KEY_HIER"; // Hier bitte deinen echten OpenAI Key einsetzen
+        const API_KEY = "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"; // Hier bitte deinen echten OpenAI Key einsetzen
 
         async function sendMessage() {
             const inputField = document.getElementById("user-input");
